Use own dependency injection framework for mazebert ladder. yes, this is insane but was fun ;-)